--- a/src/index.html
+++ b/src/index.html
@@ -20,26 +20,42 @@
           </button>
           <input autocomplete="off" type="text" placeholder="Enter Search" />
           <button class="btn search_button">
-            <img class="search_logo" src="./images/search.png" alt="" />
+            <img
+              class="search_logo"
+              src="https://kehanhan.github.io/newTab/src/images/search.png"
+              alt=""
+            />
           </button>
 
           <div class="card">
             <ul>
               <li>
                 <button class="btn switch_btn" name="google">
-                  <img class="search_logo" src="./images/google.png" alt="" />
+                  <img
+                    class="search_logo"
+                    src="https://kehanhan.github.io/newTab/src/images/google.png"
+                    alt=""
+                  />
                   <span>Google</span>
                 </button>
               </li>
               <li>
                 <button class="btn switch_btn" name="baidu">
-                  <img class="search_logo" src="./images/baidu.png" alt="" />
+                  <img
+                    class="search_logo"
+                    src="https://kehanhan.github.io/newTab/src/images/baidu.png"
+                    alt=""
+                  />
                   <span>Baidu</span>
                 </button>
               </li>
               <li style="margin-right: auto">
                 <button class="btn switch_btn" name="mdn">
-                  <img class="search_logo" src="./images/mdn.png" alt="" />
+                  <img
+                    class="search_logo"
+                    src="https://kehanhan.github.io/newTab/src/images/mdn.png"
+                    alt=""
+                  />
                   <span>MDN</span>
                 </button>
               </li>
