--- a/src/index.html
+++ b/src/index.html
@@ -91,6 +91,6 @@
     <footer></footer>
   </body>
   <script src="//at.alicdn.com/t/font_3167694_9zx4kjy0tiv.js"></script>
-  <script src="https://cdn.bootcdn.net/ajax/libs/jquery/3.6.0/jquery.min.js"></script>
+  <script src="https://cdn.staticfile.org/jquery/3.6.0/jquery.min.js"></script>
   <script src="main.js"></script>
 </html>
