修复删除站点的bug

--- a/src/index.html
+++ b/src/index.html
@@ -67,7 +67,7 @@
 
     <main>
       <ul class="siteList">
-        <li class="site last add_site" style="margin-right: auto">
+        <li class="site last add_site">
           <div class="site_icon">
             <svg class="icon">
               <use xlink:href="#icon-add"></use>
@@ -75,6 +75,16 @@
           </div>
           <div class="site_name">添加</div>
         </li>
+        <i></i
+        ><i></i
+        ><i></i
+        ><i></i
+        ><i></i
+        ><i></i
+        ><i></i
+        ><i></i
+        ><i></i
+        ><i></i>
       </ul>
     </main>
 
