添加两个搜索引擎

--- a/src/index.html
+++ b/src/index.html
@@ -59,6 +59,26 @@
                   <span>MDN</span>
                 </button>
               </li>
+              <li style="margin-right: auto">
+                <button class="btn switch_btn" name="github">
+                  <img
+                    class="search_logo"
+                    src="https://kehanhan.github.io/newTab/src/images/github.png"
+                    alt=""
+                  />
+                  <span>Github</span>
+                </button>
+              </li>
+              <li style="margin-right: auto">
+                <button class="btn switch_btn" name="iconfont">
+                  <img
+                    class="search_logo"
+                    src="https://kehanhan.github.io/newTab/src/images/iconfont.png"
+                    alt=""
+                  />
+                  <span>Iconfont</span>
+                </button>
+              </li>
             </ul>
           </div>
         </div>
